force-app/main/default/objects/bofc__BOFCLayoutMatrixChildObject__c/bofc__BOFCLayoutMatrixChildObject__c.object-meta.xml
<CustomObject>
    <label>BOFCLayoutMatrixChildObject</label>
    <nameField>
        <displayFormat>BLMCO-{0000}</displayFormat>
        <label>BOFCLayoutMatrixChildObject Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOFCLayoutMatrixChildObject</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>