force-app/main/default/objects/bofc__BOFCLayoutMatrixChildObject__c/fields/bofc__BOFCLayoutMatrixObject__c.field-meta.xml
<CustomField>
    <fullName>bofc__BOFCLayoutMatrixObject__c</fullName>
    <label>BOFCLayoutMatrixObject</label>
    <referenceTo>bofc__BOFCLayoutMatrixObject__c</referenceTo>
    <relationshipLabel>BOFCLayoutMatrixChildObject</relationshipLabel>
    <relationshipName>BOFCLayoutMatrixChildObject</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>