force-app/main/default/objects/bofc__BOFCLayoutMatrixChildObject__c/fields/bofc__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>bofc__Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>