force-app/main/default/objects/bofc__BOFCLayoutMatrixChildObject__c/fields/bofc__sLayouts__c.field-meta.xml
<CustomField>
    <fullName>bofc__sLayouts__c</fullName>
    <label>sLayouts</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>